# Ridics

./: CMakeLists.txt  README.md
client/: client.py  redis.py
include/datastructures/: node.h
include/http/: server.h
include/resp/: handle.h  resp_utils.h  server.h
src/: CMakeLists.txt  main.cc
src/datastructures/: node.cc
src/http/: server.cc
src/resp/: server.cc
tests/: CMakeLists.txt  test_resp.cc  test_tcp.cc
